agile: clock time for context work

--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-01 Sat 21:44]
+#+CAPTION: Clock summary at [2017-07-01 Sat 22:17]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *47:48* |       |       | 100.0 |
+| *Total time*                                                                | *48:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 47:48   |       |       | 100.0 |
-| Active                                                                      |         | 47:48 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  7:02 |  14.7 |
+| Stories                                                                     | 48:20   |       |       | 100.0 |
+| Active                                                                      |         | 48:20 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  7:02 |  14.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   1.7 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |   9.2 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |   9.1 |
 | COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.3 |
-| COMPLETED Move decoration into yarn                                         |         |       |  8:38 |  18.1 |
+| COMPLETED Move decoration into yarn                                         |         |       |  8:38 |  17.9 |
 | COMPLETED Fix broken builds due to disk space                               |         |       |  1:32 |   3.2 |
 | COMPLETED Remove =is_target= from frontends                                 |         |       |  1:14 |   2.6 |
-| COMPLETED Analysis: major yarn clean-up                                     |         |       |  9:04 |  19.0 |
+| COMPLETED Analysis: major yarn clean-up                                     |         |       |  9:04 |  18.8 |
 | STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   4.8 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  22.6 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  22.4 |
 | STARTED Move element segmentation into yarn                                 |         |       |  1:32 |   3.2 |
-| STARTED Implement the context class                                         |         |       |  0:16 |   0.6 |
+| STARTED Implement the context class                                         |         |       |  0:48 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -463,6 +463,7 @@ Notes:
   then see where segmentation ends.
 
 *** STARTED Implement the context class                               :story:
+    CLOCK: [2017-07-01 Sat 21:45]--[2017-07-01 Sat 22:17] =>  0:32
     CLOCK: [2017-07-01 Sat 21:28]--[2017-07-01 Sat 21:44] =>  0:16
 
 Tasks:
