--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,24 +12,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-04 Tue 08:43]
+#+CAPTION: Clock summary at [2017-07-06 Thu 07:26]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *0:40* |      |      | 100.0 |
+| *Total time*                                                                | *2:16* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 0:40   |      |      | 100.0 |
-| Active                                                                      |        | 0:40 |      | 100.0 |
-| STARTED Implement the context class                                         |        |      | 0:40 | 100.0 |
+| Stories                                                                     | 2:16   |      |      | 100.0 |
+| Active                                                                      |        | 2:16 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |  29.4 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |  17.6 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  52.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
-*** Sprint and product backlog grooming                               :story:
+*** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-07-03 Thu 20:15]--[2017-07-03 Thu 20:55] =>  0:40
 
 Updates to sprint and product backlog.
 
 *** COMPLETED Edit release notes for previous sprint                  :story:
     CLOSED: [2017-07-05 Wed 16:08]
+    CLOCK: [2017-07-03 Thu 20:56]--[2017-07-03 Thu 21:20] =>  0:24
 
 Add github release notes for previous sprint.
 
@@ -72,7 +76,9 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://twitter.com/MarcoCraveiro/status/881860977330880512][Tweet]]
 - [[https://www.linkedin.com/feed/update/urn:li:activity:6287627272706891776/][LinkedIn]]
 
-*** STARTED Implement the context class                               :story:
+*** COMPLETED Implement the context class                             :story:
+    CLOSED: [2017-07-06 Thu 07:25]
+    CLOCK: [2017-07-06 Thu 06:53]--[2017-07-06 Thu 07:25] =>  0:32
     CLOCK: [2017-07-04 Tue 08:03]--[2017-07-04 Tue 08:43] =>  0:40
 
 Tasks:
