--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-06 Thu 08:06]
+#+CAPTION: Clock summary at [2017-07-06 Thu 19:07]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *2:26* |      |      | 100.0 |
+| *Total time*                                                                | *2:36* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 2:26   |      |      | 100.0 |
-| Active                                                                      |        | 2:26 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |  27.4 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |  16.4 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  49.3 |
-| STARTED Implement the exogenous transformation chain                        |        |      | 0:10 |   6.8 |
+| Stories                                                                     | 2:36   |      |      | 100.0 |
+| Active                                                                      |        | 2:36 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |  25.6 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |  15.4 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  46.2 |
+| STARTED Implement the exogenous transformation chain                        |        |      | 0:20 |  12.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -90,6 +90,7 @@ Tasks:
   current API.
 
 *** STARTED Implement the exogenous transformation chain              :story:
+    CLOCK: [2017-07-06 Thu 18:57]--[2017-07-06 Thu 19:07] =>  0:10
     CLOCK: [2017-07-06 Thu 07:26]--[2017-07-06 Thu 07:36] =>  0:10
 
 Tasks:
