--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 11:02]
+#+CAPTION: Clock summary at [2017-07-07 Fri 11:17]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:59* |      |      | 100.0 |
+| *Total time*                                                                | *5:13* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:59   |      |      | 100.0 |
-| Active                                                                      |        | 4:59 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |  13.4 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   8.0 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  24.1 |
-| STARTED Implement the exogenous transformation chain                        |        |      | 2:43 |  54.5 |
+| Stories                                                                     | 5:13   |      |      | 100.0 |
+| Active                                                                      |        | 5:13 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |  12.8 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   7.7 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  23.0 |
+| STARTED Implement the exogenous transformation chain                        |        |      | 2:57 |  56.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -90,6 +90,7 @@ Tasks:
   current API.
 
 *** STARTED Implement the exogenous transformation chain              :story:
+    CLOCK: [2017-07-07 Fri 11:03]--[2017-07-07 Fri 11:17] =>  0:14
     CLOCK: [2017-07-07 Fri 09:01]--[2017-07-07 Fri 11:02] =>  2:01
     CLOCK: [2017-07-06 Thu 19:08]--[2017-07-06 Thu 19:30] =>  0:22
     CLOCK: [2017-07-06 Thu 18:57]--[2017-07-06 Thu 19:07] =>  0:10
