--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 11:47]
+#+CAPTION: Clock summary at [2017-07-07 Fri 12:08]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *5:42* |      |      | 100.0 |
+| *Total time*                                                                | *6:02* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 5:42   |      |      | 100.0 |
-| Active                                                                      |        | 5:42 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  13.2 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   7.0 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  21.1 |
-| STARTED Implement the exogenous transformation chain                        |        |      | 3:21 |  58.8 |
+| Stories                                                                     | 6:02   |      |      | 100.0 |
+| Active                                                                      |        | 6:02 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  12.4 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   6.6 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  19.9 |
+| STARTED Implement the exogenous transformation chain                        |        |      | 3:41 |  61.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -91,6 +91,7 @@ Tasks:
   current API.
 
 *** STARTED Implement the exogenous transformation chain              :story:
+    CLOCK: [2017-07-07 Fri 11:48]--[2017-07-07 Fri 12:08] =>  0:20
     CLOCK: [2017-07-07 Fri 11:23]--[2017-07-07 Fri 11:47] =>  0:24
     CLOCK: [2017-07-07 Fri 11:03]--[2017-07-07 Fri 11:17] =>  0:14
     CLOCK: [2017-07-07 Fri 09:01]--[2017-07-07 Fri 11:02] =>  2:01
