--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 12:37]
+#+CAPTION: Clock summary at [2017-07-07 Fri 12:41]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:29* |      |      | 100.0 |
+| *Total time*                                                                | *6:32* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:29   |      |      | 100.0 |
-| Active                                                                      |        | 6:29 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  11.6 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   6.2 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  18.5 |
-| STARTED Implement the exogenous transformation chain                        |        |      | 4:08 |  63.8 |
+| Stories                                                                     | 6:32   |      |      | 100.0 |
+| Active                                                                      |        | 6:32 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  11.5 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   6.1 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  18.4 |
+| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  64.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -90,7 +90,9 @@ Tasks:
 - Add a method to generate the context and then unpack it to fit the
   current API.
 
-*** STARTED Implement the exogenous transformation chain              :story:
+*** COMPLETED Implement the exogenous transformation chain            :story:
+    CLOSED: [2017-07-07 Fri 12:39]
+    CLOCK: [2017-07-07 Fri 12:38]--[2017-07-07 Fri 12:41] =>  0:03
     CLOCK: [2017-07-07 Fri 12:27]--[2017-07-07 Fri 12:37] =>  0:10
     CLOCK: [2017-07-07 Fri 12:09]--[2017-07-07 Fri 12:26] =>  0:17
     CLOCK: [2017-07-07 Fri 11:48]--[2017-07-07 Fri 12:08] =>  0:20
