--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,18 +12,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 12:41]
+#+CAPTION: Clock summary at [2017-07-07 Fri 13:19]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:32* |      |      | 100.0 |
+| *Total time*                                                                | *6:51* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:32   |      |      | 100.0 |
-| Active                                                                      |        | 6:32 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  11.5 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   6.1 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  18.4 |
-| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  64.0 |
+| Stories                                                                     | 6:51   |      |      | 100.0 |
+| Active                                                                      |        | 6:51 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  10.9 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   5.8 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  17.5 |
+| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  61.1 |
+| STARTED Implement the pre-processing chain                                  |        |      | 0:19 |   4.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -113,7 +114,8 @@ Tasks:
 - update knit to conditionally use the transforms code or the legacy
   code.
 
-*** Implement the pre-processing chain                                :story:
+*** STARTED Implement the pre-processing chain                        :story:
+    CLOCK: [2017-07-07 Fri 12:59]--[2017-07-07 Fri 13:18] =>  0:19
 
 This story may be too big as one story.
 
