--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,19 +12,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 13:19]
+#+CAPTION: Clock summary at [2017-07-07 Fri 13:27]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:51* |      |      | 100.0 |
+| *Total time*                                                                | *6:59* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:51   |      |      | 100.0 |
-| Active                                                                      |        | 6:51 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  10.9 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   5.8 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  17.5 |
-| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  61.1 |
-| STARTED Implement the pre-processing chain                                  |        |      | 0:19 |   4.6 |
+| Stories                                                                     | 6:59   |      |      | 100.0 |
+| Active                                                                      |        | 6:59 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  10.7 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   5.7 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  17.2 |
+| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  59.9 |
+| STARTED Implement the pre-processing chain                                  |        |      | 0:27 |   6.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -115,6 +115,7 @@ Tasks:
   code.
 
 *** STARTED Implement the pre-processing chain                        :story:
+    CLOCK: [2017-07-07 Fri 13:19]--[2017-07-07 Fri 13:27] =>  0:08
     CLOCK: [2017-07-07 Fri 12:59]--[2017-07-07 Fri 13:18] =>  0:19
 
 This story may be too big as one story.
