--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,19 +12,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 13:43]
+#+CAPTION: Clock summary at [2017-07-07 Fri 13:51]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:13* |      |      | 100.0 |
+| *Total time*                                                                | *7:20* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:13   |      |      | 100.0 |
-| Active                                                                      |        | 7:13 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  10.4 |
+| Stories                                                                     | 7:20   |      |      | 100.0 |
+| Active                                                                      |        | 7:20 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  10.2 |
 | COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   5.5 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  16.6 |
-| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  58.0 |
-| STARTED Implement the pre-processing chain                                  |        |      | 0:41 |   9.5 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  16.4 |
+| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  57.0 |
+| STARTED Implement the pre-processing chain                                  |        |      | 0:48 |  10.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -115,6 +115,7 @@ Tasks:
   code.
 
 *** STARTED Implement the pre-processing chain                        :story:
+    CLOCK: [2017-07-07 Fri 13:44]--[2017-07-07 Fri 13:51] =>  0:07
     CLOCK: [2017-07-07 Fri 13:36]--[2017-07-07 Fri 13:43] =>  0:07
     CLOCK: [2017-07-07 Fri 13:28]--[2017-07-07 Fri 13:35] =>  0:07
     CLOCK: [2017-07-07 Fri 13:19]--[2017-07-07 Fri 13:27] =>  0:08
