--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,19 +12,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 14:31]
+#+CAPTION: Clock summary at [2017-07-07 Fri 14:50]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:41* |      |      | 100.0 |
+| *Total time*                                                                | *8:07* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:41   |      |      | 100.0 |
-| Active                                                                      |        | 7:41 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |   9.8 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   5.2 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  15.6 |
-| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  54.4 |
-| STARTED Implement the pre-processing chain                                  |        |      | 1:09 |  15.0 |
+| Stories                                                                     | 8:07   |      |      | 100.0 |
+| Active                                                                      |        | 8:07 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |   9.2 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   4.9 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  14.8 |
+| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  51.5 |
+| COMPLETED Implement the pre-processing chain                                |        |      | 1:35 |  19.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -114,7 +114,9 @@ Tasks:
 - update knit to conditionally use the transforms code or the legacy
   code.
 
-*** STARTED Implement the pre-processing chain                        :story:
+*** COMPLETED Implement the pre-processing chain                      :story:
+    CLOSED: [2017-07-07 Fri 14:50]
+    CLOCK: [2017-07-07 Fri 14:24]--[2017-07-07 Fri 14:50] =>  0:26
     CLOCK: [2017-07-07 Fri 14:16]--[2017-07-07 Fri 14:23] =>  0:07
     CLOCK: [2017-07-07 Fri 14:01]--[2017-07-07 Fri 14:15] =>  0:14
     CLOCK: [2017-07-07 Fri 13:44]--[2017-07-07 Fri 13:51] =>  0:07
