--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -168,6 +168,7 @@ rebuild. We should be able to change all of the headers to include the
 forward declaration.
 
 *** STARTED Implement the references chain                            :story:
+    CLOCK: [2017-07-08 Sat 15:15]--[2017-07-08 Sat 16:05] =>  0:37
     CLOCK: [2017-07-07 Fri 21:20]--[2017-07-07 Fri 22:03] =>  0:43
 
 Tasks:
